--- a/FormsAndWpfControls/cs/FormsAndWpfControls.csproj
+++ b/FormsAndWpfControls/cs/FormsAndWpfControls.csproj
@@ -73,6 +73,11 @@
   <ItemGroup>
     <Compile Include="ControlsCsAddIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="WinFormsUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -93,9 +98,19 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="WinFormsUserControl.resx">
       <DependentUpon>WinFormsUserControl.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\winforms-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\wpf-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Xarial.XCad.SolidWorks.0.6.10\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.6.10\build\Xarial.XCad.SolidWorks.targets')" />
