--- a/SqlDbEfNetCore/cs/SqlDbEfNetCore.csproj
+++ b/SqlDbEfNetCore/cs/SqlDbEfNetCore.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
-    <PackageReference Include="Xarial.XCad.SolidWorks" Version="0.6.10" />
+    <PackageReference Include="Xarial.XCad.SolidWorks" Version="0.7.0-20210223.2" />
   </ItemGroup>
 
   <ItemGroup>
