--- a/ModelGeneratorConsole/cs/model-generator.csproj
+++ b/ModelGeneratorConsole/cs/model-generator.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xarial.xcad.solidworks" Version="0.7.0-20210223.2" />
+    <PackageReference Include="xarial.xcad.solidworks" Version="0.7.0" />
   </ItemGroup>
 
   <ItemGroup>
