--- a/EventsHandler/vb/EventsHandler.vbproj
+++ b/EventsHandler/vb/EventsHandler.vbproj
@@ -70,14 +70,14 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="Xarial.XCad, Version=0.7.1.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.0.7.1\lib\net461\Xarial.XCad.dll</HintPath>
+    <Reference Include="Xarial.XCad, Version=0.7.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Xarial.XCad.0.7.4\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
-    <Reference Include="Xarial.XCad.SolidWorks, Version=0.7.1.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.1\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
+    <Reference Include="Xarial.XCad.SolidWorks, Version=0.7.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.4\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
     </Reference>
-    <Reference Include="Xarial.XCad.Toolkit, Version=0.7.1.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.Toolkit.0.7.1\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+    <Reference Include="Xarial.XCad.Toolkit, Version=0.7.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Xarial.XCad.Toolkit.0.7.4\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -132,11 +132,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.1\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.1\build\Xarial.XCad.SolidWorks.targets')" />
+  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.1\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.1\build\Xarial.XCad.SolidWorks.targets'))" />
+    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets'))" />
   </Target>
 </Project>
