--- a/PropertiesReader/cs/SwDmPropertiesReader/SwDmPropertiesReader.csproj
+++ b/PropertiesReader/cs/SwDmPropertiesReader/SwDmPropertiesReader.csproj
@@ -37,8 +37,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SolidWorks.Interop.swdocumentmgr, Version=29.1.0.61, Culture=neutral, PublicKeyToken=e52dfa2d3a1e978a, processorArchitecture=MSIL">
-      <HintPath>..\PropertiesReader\packages\Xarial.XCad.SolidWorks.DocumentManager.Interops.0.1.0\lib\net40\SolidWorks.Interop.swdocumentmgr.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\packages\Xarial.XCad.SolidWorks.DocumentManager.Interops.0.1.0\lib\net40\SolidWorks.Interop.swdocumentmgr.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -54,14 +54,14 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Xarial.XCad, Version=0.7.1.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.0.7.1\lib\net461\Xarial.XCad.dll</HintPath>
+    <Reference Include="Xarial.XCad, Version=0.7.4.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xarial.XCad.0.7.4\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
-    <Reference Include="Xarial.XCad.SwDocumentManager, Version=0.7.1.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.SwDocumentManager.0.7.1\lib\net461\Xarial.XCad.SwDocumentManager.dll</HintPath>
+    <Reference Include="Xarial.XCad.SwDocumentManager, Version=0.7.4.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xarial.XCad.SwDocumentManager.0.7.4\lib\net461\Xarial.XCad.SwDocumentManager.dll</HintPath>
     </Reference>
-    <Reference Include="Xarial.XCad.Toolkit, Version=0.7.1.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.Toolkit.0.7.1\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+    <Reference Include="Xarial.XCad.Toolkit, Version=0.7.4.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xarial.XCad.Toolkit.0.7.4\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
