--- a/PropertiesReader/cs/PropertiesReader/PropertiesReader.csproj
+++ b/PropertiesReader/cs/PropertiesReader/PropertiesReader.csproj
@@ -46,8 +46,8 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
-    <Reference Include="Xarial.XCad, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.0.7.5\lib\net461\Xarial.XCad.dll</HintPath>
+    <Reference Include="Xarial.XCad, Version=0.8.0.4597, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xarial.XCad.0.8.0-dev.4597\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XToolkit, Version=0.2.20.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
       <HintPath>..\packages\Xarial.XToolkit.0.2.20\lib\net461\Xarial.XToolkit.dll</HintPath>
